# collection_id

./: .gitignore  Cargo.toml  build.rs  config  config.toml  cross.toml
.github/workflows/: rust.yml
cid/: Cargo.toml  build.rs
cid/src/: main.rs
launcid/: Cargo.toml
launcid/src/: backup.rs.bak  main.rs  main.rs.0.1.0
src/: main.rs  main.rs.1.0.0  main.rs.1.0.1  main.rs.1.0.2  main.rs.1.0.3  main.rs.1.1.0  main.rs.1.1.1  main.rs.1.1.2
