[package]
name = "main"
version = "1.3.3"
edition = "2024"
description = "Get Voucher By Collections"
build = "build.rs"

[build-dependencies]
winresource = "0.1"

[package.metadata.winresource]
LegalCopyright = "Copyright @ 2023 Paijo"
OriginalFilename = "collection.exe"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rquest = { version = "1.5.5", features = ["gzip", "json"] }
tokio = { version = "1", features = ["full"] }
anyhow = "1.0"
chrono = "0.4"
indicatif = "0.17"
atty = "0.2.14"
structopt = "0.3"
base64 = "0.13"
urlencoding = "2.1.3"
windows-version = "0.1.0"
windows = "0.52.0"
