[package]
name = "launcid"
version = "1.3.3"
edition = "2024"
authors = ["Paijo"]
description = "Launcher for collection"
build = "build.rs"

[build-dependencies]
winresource = "0.1"

[package.metadata.winresource]
LegalCopyright = "By Paijo"
OriginalFilename = "launcher.exe"
CompanyName = "Paijo"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
native-windows-gui = "1.0.13"
native-windows-derive = "1.0.5"
stretch = "0.3.2"
winapi = { version = "0.3", features = ["winuser", "winbase", "wingdi"] }
